# Study

./: README.md
ITMO-University/Developing-interactive-digital-resources/: README.md  index.html  lab1.php  style.css
ITMO-University/Formal-Grammar/: README.md
ITMO-University/Google_Blogger_Architectural_Design/: README.md
ITMO-University/Information-security/: README.md  vigenere.py
ITMO-University/Multithreading-programming/: README.md
ITMO-University/Network-topology/: First_Lab.pkt  README.md  Second_lab.pkt  Shubarov P33212 Lab_4.docx  Third_Lab.pkt
ITMO-University/Neurointerface/: README.md  neuro_eeg.ipynb
ITMO-University/Postgresql-administration/: Claster_backups_configuration.docx  Claster_initial_configuration .docx  README.md  own_machines_replication_conff.docx
ITMO-University/information_system_engineering/: README.md  Инжиниринг Шубаров Радик P34212 .docx  Реинжиниринг Шубаров Радик P34212 .docx
Self-study/Bash-Scripts/: README.md  age_group.sh  change_str.sh  choose_file_editor.sh  find_all_emails_in_etc.sh  max_of_three_int.sh  read_str_until_press_q.sh  read_until_even_numb.sh  script.sh  two_string_compare.sh  weekday_by_birthday.sh
Self-study/Data-structures-and-algorithms/: Find_count_of_int_rotations.py  README.md  bfs_graph.py  cache_decision.py  dijkstra.py  quick_sort.py  recursion_calculations.py  selection_sort.py
Self-study/DevOps/: README.md
Self-study/DevOps/Sqlite3-Docker-Container-Ansible/: CMakeLists.txt  README.md  playbook_install_docker.yml  playbook_sqlite3.yml
Self-study/Simple-equalizer/: README.md  (+3 more)
(+40 files in other folders)
